# OO2026Viikkopalautukset

./: .gitignore  README.md
Viikkoteht_1/Viikkotehtava1/: CMakeLists.txt  main.cpp
Viikkoteht_2/Viikkotehtava2/: CMakeLists.txt  game.cpp  game.h  main.cpp
Viikkoteht_3/Viikkotehtava_3/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
